# sdwan

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  Dockerfile  LICENSE.txt  README.md  bootstrap  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  todo.rst
.devcontainer/: devcontainer.env.template  devcontainer.json  postStart.sh
.github/: dependabot.yml
.github/workflows/: CODEOWNERS  ci-validation.yml  codeql-analysis.yml  docker-build.yml  sonarqube.yml
ansible/: ansible.cfg  change_request_vars.yml  create_migration_change.yml  delete_index_file.yml  detach_template_play.yml  get_minibootstrap.yml  get_minibootstrap_1kv.yml  ios_backupconf.yml  ios_preupgrade.sh  ios_rommon.yml  ios_upgrade.yml  migration.sh  migration.yml  minibootstrap.yml  notify.yml  notify_play.yml  post_migration.yml  pre_attach.sh  pre_attach_dualrouter.sh  pre_migration.sh  pre_migration_dualrouter.sh  pre_upgrade.yml  provision.yml  push_device_template_play.yml  reboot.py  requirements.yml  rommon_close_cr.yml  rommon_cr_vars.yml  rommon_create_cr.yml  rommon_upgrade.sh  rommon_upgrade.yml  sdwan_update.yml  snap_attach.sh  templify.yml  vmanage_diff_play.yml
ansible/inventory/: README.md  inventory
ansible/inventory_unmigrated/: unmigrated  vpls_fixed
ansible/roles/: README.md
ansible/tasks/: detach_template.yml  ios_reload.yml  push_device_template.yml  vmanage_authentication.yml
ansible/templates/: bootstrapmini.j2  bootstrapmini_1kv.j2  notify.j2  notify_post.j2  notify_post_snap_attach.j2  sdwan_hw_c1111.yml  sdwan_hw_c4331.yml  sdwan_hw_c4431.yml  sdwan_routing.j2  sdwan_services.j2  sdwan_template.j2
ansible/trash/: attach_template.yml  close_change_task.yml  controller_mode.yml  create_change_task.yml  get_bootstrap.yml  ios_new_test.sh  ios_new_test.yml  ios_sat_basic_connectivity.yml  ios_sat_test.yml  ios_sat_test_play.yml  ios_sat_test_pre.yml  ios_sat_test_pre_sdwan.yml  ios_show_ip_route_summary.yml  run_create_change.yml  snap.yml  snap_attach.yml  zed.yml
django/djangoweb/: settings.py  urls.py
django/snapweb/: apps.py  urls.py
django/templates/: base.html  footer.html  header.html  home.html  list.html  sidenav.html  upload_file.html
dot1x/ansible/: ansible.cfg  provision.yml
scripts/: check_vars.py  get_siteid.py  getsiteid.py  interface_collector.py  templify.py  zs.py
scripts/vmanage_py/: README.md  __main__.py  vmanage_authentication.py
src/snap/: __init__.py  __main__.py  config.py  device.py  json_validate.py  logger.py  netverify.py  regionalvar.yml  service.py  (+3 more)
tests/: __init__.py  conftest.py  helper.py  test_base.py  test_device.py  test_differ.py  test_dualrouter.py  test_head.py  test_internet.py  test_lan.py  test_office_voice.py  test_service.py  test_snap.py  test_update_device_temp.py  test_voice.py  test_vpls.py  test_zscaler_ipsec.py  test_zsipsec.py
(+247 files in other folders)
