[metadata]
name = snap
description = SDWAN Network Automation Platform
author = awsome network team
author_email = awsome.network@hm.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hm-group/sdwan
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.9
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

testing =
    setuptools
    pytest
    pytest-cov
    pytest-mock

[options.entry_points]
console_scripts =
    db = snap.db:db
    snap = snap.__main__:main
    netverify = snap.netverify:main
    zed = zed.__main__:main
    zs = snap.zscaler:zs

[tool:pytest]
addopts =
    --cov snap --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
    ansible
    data
    dev
testpaths = tests

[flake8]
max-line-length = 99
doctests = True
ignore =
    # imported but unused
    F401,
    # whitespace before :
    # E203,
    # linebreak before a binary operator
    # W503

exclude = build,dist,.venv,venv,.git,.tox,docs,bin,lib,deps,build,ansible,temp,migration,dev*,scripts,django*

[isort]
line_length=99
combine_as_imports = true

[yapf]
based_on_style = google
column_limit = 99
split_before_logical_operator = true
